--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,99 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.container{
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.note-list{
+  display: grid;
+  grid-gap: 1.25rem;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(250px, 1fr)
+  );
+}
+.addnote{
+  background-color: aquamarine;
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+textarea{
+  border: none;
+  resize: none;
+  background-color: aquamarine;
+}
+textarea:focus{
+  outline: none;
+}
+.savebutton{
+  background-color: whitesmoke;
+    border: none;
+    border-radius: 15px;
+    padding: 5px 10px 5px 10px;
+}
+@keyframes pulse {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.1);
+  }
+  100% {
+      transform: scale(1);
+  }
+}
+
+.savebutton:hover {
+  animation: pulse 1s ;
+}
+
+.note{
+  background-color: #fef68a;
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.note-footer{
+  display: flex;
+  align-items: center;
+  justify-content:space-between ;
+}
+
+.note-limit-reached {
+  .note-footer{
+    color: red;
+    font-size: large;
+    font-weight: bold;
+  }
+  .savebutton{
+    visibility: hidden;
+  }
+}
+
+.delete-icon {
+  transition: transform 0.3s ease;
+}
+
+.delete-icon:hover {
+  transform: scale(1.5);
+}
+
