--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,22 @@ textarea:focus{
   transform: scale(1.5);
 }
 
+.search{
+  display: flex;
+  align-items: center;
+  background-color: grey ;
+  border-radius: 10px;
+  padding:5px ;
+  margin-bottom: 1.5em;
+
+}
+
+.search input{
+  border: none;
+  background-color: grey;
+
+}
+
+.search input:focus{
+  outline: none;
+}
